tests/errors/semantics/cannot_find_jmp_label.odl
main :: () -> void  {
    do:thing {
        break:thing2;
    };
};